--- a/child_pages/cc-elections/Candidates/rush.html
+++ b/child_pages/cc-elections/Candidates/rush.html
@@ -49,7 +49,7 @@
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Carolyn Rush</h6>
               <p>
-                Candidate Rush has an extensive experience engineering and management which she says she will use to help break down the 
+                Candidate Rush has extensive experience in engineering and management which she says she will use to help break down the 
                 problems in Washington and help politicians begin to collaborate more effectively. She has lots of detailed policy positions 
                 and proposals on her site for topics such as climate change, women's reproductive rights, LGBTQ rights, and much more. Inform 
                 the vote would like to highlight that Rush points to specific differences in policy approach in comparison to that of the 
