--- a/child_pages/cc-elections/Candidates/salerno.html
+++ b/child_pages/cc-elections/Candidates/salerno.html
@@ -50,7 +50,7 @@
               <h6 class="page-title">Joe Salerno</h6>
               <p>
                 Candidate Salerno is a successful businessman with degrees in engineering and law. One of his main campaign messages seems 
-                to be an response to Congressman Van Drew appearing to be a sell-out to former President Trump and other politicians in Washington,
+                to be a response to Congressman Van Drew appearing to be a sell-out to former President Trump and other politicians in Washington,
                 instead of keeping the constituents of South Jersey as the top priority. He has a bunch of agenda items such as protecting 
                 reproductive rights, instituting tax credits to bring manufacturing back, protecting social security, and more.
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
