--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -53,6 +53,14 @@
         <div class="main-content-with-box-shadow-events">
             <h1 class="events-h1">Events</h1>  
 
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Meet and Greet</strong></li>
+                    <li class="description">Meet Patricia Campos-Medina at the Mountainside Inn<a href="https://twitter.com/Patricia4NJ/status/1794696221782900866">Details on Twitter/X</a></li>
+                    <li class="date-and-time">05/28/24 - 6:00 pm</li>
+                    <li class="location">509 Hazel Street, Clifton, NJ</li>
+                </ul>
+            </div>
 
             <div class="event-card">
                 <ul class="event-info">
