added video boxes to homepage

--- a/index.html
+++ b/index.html
@@ -144,6 +144,29 @@
                 </div>
             </div>
         </nav>
+        <div class="hp-video-box">
+            <div class="video-box-sm">
+                <iframe src="https://www.youtube.com/embed/H2rQvSNB9lk?si=yTAoPWGzAmPxAQW-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h3 class="video-heading-sm">Interview with Albert Harshaw</h3>
+                <div class="video-sm-desc">
+                    Here is a short description about the video.
+                </div>
+            </div>
+            <div class="video-box-sm">
+                <iframe src="https://www.youtube.com/embed/lkB9qmytjuE?si=M8P-MqZKaRB8faw8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h3 class="video-heading-sm">Interview with Peter Vallorosi</h3>
+                <div class="video-sm-desc">
+                    Here is a short description about the video.
+                </div>
+            </div>
+            <div class="video-box-sm">
+                <iframe src="https://www.youtube.com/embed/dpBg37i9cx0?si=rcfj8cK8QyAxvn4J" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h3 class="video-heading-sm">Interview with Rodney Dean</h3>
+                <div class="video-sm-desc">
+                    Here is a short description about the video.
+                </div>
+            </div>
+        </div>
         <div class="main-content-box-with-shadow">
             <h4 class="ms-heading">Mission Statement</h4>
             <div class="ms-content">
