extra main content box removed, test

--- a/index.html
+++ b/index.html
@@ -151,17 +151,19 @@
             <div class="ms-content">
                 <p class="ms-content-p">
                  Most of the primary results are in, with the following winners: 
-                 <br>
+                </p>
+                 <p class="ms-content-p">
                  Former County Commissioner John Capizola and former Sheriff Austino won the democrat primaries for the two County Commissioner seats. They will run against Republican
                  incumbents Joe Sileo and Tony Romero.
-                 <br>
+                </p>
+                <p class="ms-content-p">
                  As of today, 6/10/2024 it looks like the Democrat Primary for House of Representatives still has some votes to count, with Joe Salerno and Tim Alexander within 250 
                  votes of each other, with Salerno in the lead. The winner will run against Republican incumbent Jeff Van Drew.
-                 <br>
+                </p>
                  Congressman Andy Kim won the State Senate Democrat nomination for US Senate. Curtis Bashaw won the Republican nomination for the same seat. They will both run against 
                  incumbent Bob Menendez, who will be running as an independent. Also, it is our understanding that independent candidate Peter Vallorosi will be running in this race 
                  as well.
-                 <br>
+                 <p class="ms-content-p">
                  There are various other seats that may be important to Cumberland County, but it is not quite clear yet which seats have races with challengers.
                 </p>
                 <p class="ms-content-p">
@@ -200,7 +202,7 @@
                 </div>
             </div>
         </div>
-        <div class="main-content-box-with-shadow">
+        
             <h4 class="ms-heading">Mission Statement</h4>
             <div class="ms-content">
                 <p class="ms-content-p">
