--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     </div>
                 </div>
                 <div class="video-box-sm">
-                    <iframe src="https://www.youtube.com/embed/3G2W4xLv52U?si=v1X_u0sS-7jijhur" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                    <h3 class="video-heading-sm">Interview with Peter Vallorosi</h3>
+                    <iframe src="https://www.youtube.com/embed/3G2W4xLv52U?si=v1X_u0sS-7jijhur" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <h3 class="video-heading-sm">What's Going On</h3>
                     <div class="video-sm-desc">
                         Primary Results 2024
