basic county commissioner ballot page

--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
                 </div>
                 <div class="nav-buttons-2">
                     <div class="elections-dropdown-links">
-                        <a href="child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Commissioner Democrat Primary</a>
-                        <a href="child_pages/cc-elections/us_houseofrepresentatives_demprimary.html">Democrat Primary US House of Representatives</a>
-                        <a href="child_pages/cc-elections/us_repubprimary_senate.html">Republican Primary US Senate</a>
-                        <a href="child_pages/cc-elections/us_demprimary_senate.html">Democrat Primary US Senate</a>
-                        <a href="child_pages/cc-elections/us_president_demprimary.html">Democrat Primary President</a>
+                        <a href="child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Commissioners</a>
+                        <a href="child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Clerk</a>
+                        <a href="child_pages/cc-elections/us_houseofrepresentatives_demprimary.html">US House of Representatives, NJ's 2nd Congressional District</a>
+                        <a href="child_pages/cc-elections/us_repubprimary_senate.html">US Senate, NJ</a>
+                        <a href="child_pages/cc-elections/us_president_demprimary.html">US President</a>
                     </div>
                 </div>
             </div>
