riley page filled

--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -66,8 +66,8 @@
             <div class="position">Cumberland County Clerk</div>
         </div>
         <div class="incum-or-challenger">
-            <div class="incumbent active">Incumbent</div>
-            <div class="challenger inactive">Challenger</div> 
+            <div class="incumbent inactive">Incumbent</div>
+            <div class="challenger active">Challenger</div> 
         </div>
     </div>
     <div class="candidate-pic-box">
