design tweaks county clerk ballot

--- a/child_pages/cc-elections/cc_county_clerk_2024.html
+++ b/child_pages/cc-elections/cc_county_clerk_2024.html
@@ -69,7 +69,7 @@
       </dialog>
 
 
-    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+    <!-- <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
 
 
     <div id="sample-ballot">
@@ -78,10 +78,10 @@
             <h3>ELECTION DATE: Tuesday, November 5th</h3>
             <h2>SAMPLE BALLOT</h2>
             <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
-            <h4>General Election</h4>
-            <h6>COUNTY CLERK 2024</h6>  
-            <h4>DEMOCRATIC</h4>
-            <h6>DEMOCRATA</h6>
+            <h2>General Election</h2>
+            <h4>COUNTY CLERK 2024</h4>  
+            <!-- <h4>DEMOCRATIC</h4>
+            <h6>DEMOCRATA</h6> -->
         </div>
         
         <div id="democratic-candidates">
