few more design tweaks to county clerk ballot

--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -44,6 +44,44 @@
         </div>
     </div>
 
+    <nav class="nav-2-electric-buggalo">
+        <img src="assets/INFORM THE_no_bg.png" alt="inform the vote logo" class="logo-img">
+        <div class="nav-buttons">
+            <div class="nav-buttons-1">
+                <div id='navBoxToggle' class="elections-nav">
+                    <span>Elections</span>
+                </div>
+                <div class="county-issues-nav">
+                    <a href="child_pages/cc-elections/cc_election_issues.html" class="county-issues-link">County Issues</a>
+                </div>
+                <div class="get-involved-nav">
+                    <a href="child_pages/get-involved.html" class="get-involved-link">Get Involved</a>
+                </div>
+                <div class="events-nav">
+                    <a href="child_pages/events.html" class="events-link">Events</a>
+                </div>
+                <div class="resources-archives-and-rabbit-holes-nav">
+                    <a href="child_pages/resources-archives-and-rabbit-holes.html" class="events-link">Extra Info</a>
+                </div>
+                <div class="about-nav">
+                    <a href="child_pages/about.html" class="about-link">About</a>
+                </div>
+                <div class="contact-nav">
+                    <a href="child_pages/contact.html" class="contact-link">Contact</a>
+                </div>
+            </div>
+            <div class="nav-buttons-2">
+                <div class="elections-dropdown-links">
+                    <a href="child_pages/cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a>
+                    <a href="child_pages/cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a>
+                    <a href="child_pages/cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a>
+                    <a href="child_pages/cc-elections/us_senate_2024.html">US Senate, NJ</a>
+                    <a href="child_pages/cc-elections/us_president_2024.html">US President</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    
     <dialog id="myModal" class="modal">
 
         <!-- Modal content -->
@@ -69,7 +107,7 @@
       
       </dialog>
 
-    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+    <!-- <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
 
 
     <div id="sample-ballot">
