design tweaks added to correct page.... derp

--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -81,13 +81,13 @@
             </div>
         </div>
     </nav>
-    
+
     <dialog id="myModal" class="modal">
 
         <!-- Modal content -->
         <div class="modal-content">
           <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
-          <h4 class="quick-sum">quick summary</h4>
+          <h4 class="quick-sum">quick summary button</h4>
           <h6 class="page-title">County Commissioner</h6>
           <p>This year 2 seats are open on the County Commissioner board. The republicans
             are running two incumbents, <a href="https://www.ccrrogop.org/county-commissioner">Director Commissioner Sileo and Commissioner Romero</a>. The democrats are running two 
