--- a/child_pages/cc-elections/cc_county_clerk_2024.html
+++ b/child_pages/cc-elections/cc_county_clerk_2024.html
@@ -49,7 +49,7 @@
         <!-- Modal content -->
         <div class="modal-content">
           <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
-          <h4 class="quick-sum">quick summary</h4>
+          <h4 class="quick-sum">quick summary button</h4>
           <h6 class="page-title">County Commissioner</h6>
           <p>This year the County Clerk seat is open for election. The current Democrat Clerk, <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/">Celeste Riley</a>, 
             is running for re-election against Republican challenger, <a href="https://www.ccrrogop.org/cumberlandcountyclerk2024">Commissioner Lods</a>.
@@ -68,7 +68,43 @@
       
       </dialog>
 
-
+      <nav class="nav-2-electric-buggalo">
+        <img src="assets/INFORM THE_no_bg.png" alt="inform the vote logo" class="logo-img">
+        <div class="nav-buttons">
+            <div class="nav-buttons-1">
+                <div id='navBoxToggle' class="elections-nav">
+                    <span>Elections</span>
+                </div>
+                <div class="county-issues-nav">
+                    <a href="child_pages/cc-elections/cc_election_issues.html" class="county-issues-link">County Issues</a>
+                </div>
+                <div class="get-involved-nav">
+                    <a href="child_pages/get-involved.html" class="get-involved-link">Get Involved</a>
+                </div>
+                <div class="events-nav">
+                    <a href="child_pages/events.html" class="events-link">Events</a>
+                </div>
+                <div class="resources-archives-and-rabbit-holes-nav">
+                    <a href="child_pages/resources-archives-and-rabbit-holes.html" class="events-link">Extra Info</a>
+                </div>
+                <div class="about-nav">
+                    <a href="child_pages/about.html" class="about-link">About</a>
+                </div>
+                <div class="contact-nav">
+                    <a href="child_pages/contact.html" class="contact-link">Contact</a>
+                </div>
+            </div>
+            <div class="nav-buttons-2">
+                <div class="elections-dropdown-links">
+                    <a href="child_pages/cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a>
+                    <a href="child_pages/cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a>
+                    <a href="child_pages/cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a>
+                    <a href="child_pages/cc-elections/us_senate_2024.html">US Senate, NJ</a>
+                    <a href="child_pages/cc-elections/us_president_2024.html">US President</a>
+                </div>
+            </div>
+        </div>
+    </nav>
     <!-- <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
 
 
