full ballot page summary modal

--- a/child_pages/cc-elections/cc_full_ballot_2024.html
+++ b/child_pages/cc-elections/cc_full_ballot_2024.html
@@ -41,6 +41,33 @@
     </div>
 
     <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+
+    <dialog id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+          <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+          <h4 class="quick-sum">quick summary button</h4>
+          <h6 class="page-title">Full Ballot</h6>
+          <p>
+            This page reflects the full ballot of all choices that will appear in the general election. There are quite a few choices and the information can be quite overwhelming.
+            With that in mind, this summary will focus on pointing out that candidates can be looked at in terms of their party affiliation that have party platforms, as individuals 
+            who may not always go along with the party agenda, or a mixture of party members/individuals. Two well known cases where these distinctions can happen are Joe Manchin, 
+            who is a Democrat that commonly votes fiscally conservative, and Mitt Romney, who is a Republican that has implemented a subsidized healthcare system in Massachussetts.
+            It is also very common for candidates to say that they are running 'slate' or with the party ticket... so unless explicitly stated otherwise, it is fair to assume 
+            the party's platform is the candidate's platform. We encourage you to visit the official <a href="https://democrats.org/">Democrats site</a> and read their 
+            <a href="http://democrats.org/where-we-stand/party-platform/">platform</a>, and then the official <a href="https://www.gop.com/about-our-party/">Republican site</a> 
+            and read their <a href="https://prod-static.gop.com/media/Resolution_Platform.pdf?_gl=1*1uvnu73*_gcl_au*ODAxNzY2Njk5LjE3MjAzNzc0NDM.&_ga=2.38264423.515891365.1720377445-194607558.1720377444">
+            platform</a>, to get an overall idea of what the parties intentions are. Then, you can go to our sub-categorized elections to focus on specific races, such as 
+            just the people running for commissioner, just the people running for County Clerk, etc., so you can focus on the nuances of the individual candidates, the seats 
+            they are running for and how they will specifically handle that role, what their specific qualifications and agendas are, and if they have expressed any deviations 
+            from their party affiliations. We want to make it clear that part of the purpose of the site is that we are trying to reach out to the candidates to clarify all these 
+            distinctions and make the critical thinking process more efficient for you.
+          </p>
+        </div>
+      
+      </dialog>
+
     <div id="sample-ballot">
         <div class="sb-top-box"> 
             <h3>ELECTION DATE: November 7th, 2023</h3>
