sileo and lods updates

--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -45,13 +45,18 @@
               <h6 class="page-title">Victoria Lods</h6>
               <p>
                 Commissioner Lods is running as a challenger against Celeste Riley for the County Clerk seat. She has been involved in politics for decades, having previously held positions 
-                such as Chief of Staff for a State Senator and she was the Executive Director for Habitat for Humanity. She is currently a County Commissioner. Like many local politicians this 
-                year, she appears to be running slate with the republicans (following the Republican agenda). While Commissioner Lods does seem to be a strong, qualified candidate, it is not 
-                quite clear how she is presented as different or better than the incumbent. She has been reached out to via offical government email to clarify her individual agenda in terms 
-                of the specific County Clerk position, with no response. When asked in person about the email, she said she would look for it. When asked in person about what the specific role 
-                is of the County Clerk and how she would differentiate herself from the incumbent, she responded "If you don't know what the County Clerk does, that should tell you enough about 
-                how the role is being executed.", which I believe implies that the County Clerk should be acting as the known liason between the public and the government. 
-                Click the x at the top red of this box to go back to the page.
+                such as Chief of Staff for a State Senator and she was the Executive Director for Habitat for Humanity. She is currently a County Commissioner. At a recent Republican breakfast 
+                meeting, Lods pointed out several things that could be seen as why she is running for the position and how she differentiates herself:
+                <br>
+                1. Competence for the role is important because they are responsible for elections and could make election related errors.
+                <br>
+                2. It is important for the Clerk to actually show up for work on a regular basis and not focus on peripheral tasks such as ribbon cuttings.
+                <br>
+                3. It is common for administrative politicians to make excuses for why things aren't getting done, like broken printers in the office.
+                <br>                
+                When asked in person about what the specific role is of the County Clerk and how she would differentiate herself from the incumbent, she responded "If you don't
+                know what the County Clerk does, that should tell you enough about how the role is being executed.", which I believe implies that the County Clerk should be 
+                acting as the known liason between the public and the government. Click the x at the top red of this box to go back to the page.
               </p>
             </div>
           
