homepage rewrite functional but not live, replaced lighthouse with individual photos to match homepage rewrite theme

--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=REM:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton+SC&display=swap" rel="stylesheet">
     <script src="../app.js" async></script>
     <title>Inform The Vote</title>
 </head>
@@ -45,7 +47,9 @@
         </div>
     </div>
 
-    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+    <div class="child-page-jumbo events-jumbo">
+        <h1 class="child-page-jumbo-msg">EVENTS</h1>
+    </div>    
 
     <!--Event dates must follow an 8 character format, example: 09/09/23-->
 
