--- a/child_pages/contact.html
+++ b/child_pages/contact.html
@@ -44,7 +44,9 @@
         </div>
     </div>
 
-    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+    <div class="child-page-jumbo contact-jumbo">
+        <h1 class="child-page-jumbo-msg">CONTACT</h1>
+    </div>  
 
     <div class="contact">
         <p>
