--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=REM:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton+SC&display=swap" rel="stylesheet">
     <title>Inform The Vote</title>
 </head>
 <body>
@@ -44,7 +46,9 @@
         </div>
     </div>
 
-    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+   <div class="child-page-jumbo get-involved-jumbo">
+    <h1 class="child-page-jumbo-msg">GET INVOLVED</h1>
+   </div>
 
     <div class="container">
         <div class="main-content-box-with-shadow-gi">
