--- a/child_pages/cc-elections/house_of_representatives_2024.html
+++ b/child_pages/cc-elections/house_of_representatives_2024.html
@@ -63,10 +63,12 @@
 
     <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
     <div id="sample-ballot">
+        <button class="quick-summary-reopen">quick summary</button>
         <div class="sb-top-box"> 
             <h3>ELECTION DATE: November 7th, 2023</h3>
             <h2>SAMPLE BALLOT</h2>
             <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
+            <h3>US HOUSE OF REPRESENTATIVES</h3>
             <h4>DEMOCRATIC</h4>
             <h6>DEMOCRATA</h6>  
         </div>
@@ -135,16 +137,6 @@
                     <div class="pc-col-2">0</div>
                 </div>
             </div>
-
-
-            <div id="sample-ballot">
-                <div class="sb-top-box"> 
-                    <h3>ELECTION DATE: November 7th, 2023</h3>
-                    <h2>SAMPLE BALLOT</h2>
-                    <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
-                    <h4>Republican Primary</h4>
-                    <h6>US Senate</h6>  
-                </div>
                 
                 
                     <div class="sb-top-box"> 
