--- a/index.html
+++ b/index.html
@@ -114,13 +114,14 @@
                         </div>
                         <div class="accordion">
                             <input type="checkbox" name="accordion" id="second">
-                            <label for="second">County Issues</label>
+                            <label for="second">Issues</label>
                             <div class="nested-burger-links">
-                                <li class="link"><a href="#">Link 1</a></li>
-                                <li class="link"><a href="#">Link 2</a></li>
-                                <li class="link"><a href="#">Link 3</a></li>
-                                <li class="link"><a href="#">Link 4</a></li>
-                                <li class="link"><a href="#">Link 5</a></li>
+                                <li class="link"><a href="#">Cumberland County Issues</a></li>
+                                <li class="link"><a href="#">County Clerk Issues</a></li>
+                                <li class="link"><a href="#">House of Representatives Issues</a></li>
+                                <li class="link"><a href="#">US Senate Issues</a></li>
+                                <li class="link"><a href="#">Vice President Issues</a></li>
+                                <li class="link"><a href="#">President Issues</a></li>
                             </div>
                         </div>
                         <li class="link"><a href="child_pages/get-involved.html">Get Involved</a></li>
