county commissioner ballot cleanup and cc issues link added to index nav bar

--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -56,7 +56,7 @@
             challengers, <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/">former Commissioner Capizola and former Sheriff Austino</a>. Both parties appear to be 
             running 'slate', which means they are running as a team within their parties, potentially all the way up to the national level. All candidates have been reached out to in terms 
             of clarifying their individual characteristics, agendas, and comparisons to other candidates. None have responded. So, if you vote party line, as of now, that's fair. If you're 
-            more of an independent who votes for individuals as opposed to parties, their is no significant information as of yet. 
+            more of an independent who votes for individuals as opposed to parties, there is no significant information as of yet. 
             <br>
             <br>
             The two republican incumbents for County Commissioner inherently have experience, so it is the opinion of Inform the Vote that there 
@@ -151,15 +151,13 @@
                 </div>
             </div>
             <div class="row state-senator">
-                <div class="office-title">
-                    <div class="ot-english">
-                        <p>US Senate</p>
-                        <p>Vote for One</p>
-                    </div>
-                    <div class="ot-espanol">
-                        <p>Senadora</p>
-                        <p>Vote por Uno</p>
-                    </div>
+                <div class="ot-english">
+                    <p>County Commissioners</p>
+                    <p>Vote for Two</p>
+                </div>
+                <div class="ot-espanol">
+                    <p>Junta Comisionados del Empleados</p>
+                    <p>Vote por Dos</p>
                 </div>
                 <div class="a">
                     <div class="a-row-1">
@@ -226,7 +224,7 @@
                         </div>
                         <div class="ot-espanol">
                             <p>Junta Comisionados del Empleados</p>
-                            <p>Vote por Dos</p>
+                            <p>Vota por Dos</p>
                         </div>
                     </div>
                     <div class="a">
@@ -235,7 +233,7 @@
                                 <p>Republican</p> 
                             </div>
                             <div class="first-name">
-                                <a href="Candidates/bashaw.html">Curtis</a>
+                                <a href="Candidates/sileo.html">Joseph</a>
                             </div>
                             <div class="number-a-and-circle"> 
                                 <p>1A</p>
@@ -244,7 +242,7 @@
                         </div>
                         <div class="a-row-2">
                             <div class="last-name push-down-last-name">
-                                <a href="Candidates/bashaw.html">Bashaw</a>
+                                <a href="Candidates/sileo.html">Sileo</a>
                             </div>
                         </div>
     
@@ -267,7 +265,7 @@
                         </div>
                         <div class="ot-espanol">
                             <p>Junta Comisionados del Empleados</p>
-                            <p>Vote por Dos</p>
+                            <p>Vota por Dos</p>
                         </div>
                     </div>
                     <div class="a">
@@ -276,7 +274,7 @@
                                 <p>Republican</p> 
                             </div>
                             <div class="first-name">
-                                <a href="Candidates/bashaw.html">Curtis</a>
+                                <a href="Candidates/romero.html">Antonio</a>
                             </div>
                             <div class="number-a-and-circle"> 
                                 <p>1A</p>
@@ -285,7 +283,7 @@
                         </div>
                         <div class="a-row-2">
                             <div class="last-name push-down-last-name">
-                                <a href="Candidates/bashaw.html">Bashaw</a>
+                                <a href="Candidates/romero.html">Romero</a>
                             </div>
                         </div>
     
