--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <input type="checkbox" name="accordion" id="second">
                             <label for="second">Issues</label>
                             <div class="nested-burger-links">
-                                <li class="link"><a href="#">Cumberland County Issues</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
                                 <li class="link"><a href="#">County Clerk Issues</a></li>
                                 <li class="link"><a href="#">House of Representatives Issues</a></li>
                                 <li class="link"><a href="#">US Senate Issues</a></li>
