county commissioner ballot fix

--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -117,7 +117,7 @@
                     </div>
                     <div class="ot-espanol">
                         <p>Junta Comisionados del Empleados</p>
-                        <p>Vote por Dos</p>
+                        <p>Vota por Dos</p>
                     </div>
                 </div>
                 <div class="a">
@@ -151,13 +151,15 @@
                 </div>
             </div>
             <div class="row state-senator">
-                <div class="ot-english">
-                    <p>County Commissioners</p>
-                    <p>Vote for Two</p>
-                </div>
-                <div class="ot-espanol">
-                    <p>Junta Comisionados del Empleados</p>
-                    <p>Vote por Dos</p>
+                <div class="office-title">
+                    <div class="ot-english">
+                        <p>County Commissioners</p>
+                        <p>Vote for Two</p>
+                    </div>
+                    <div class="ot-espanol">
+                        <p>Junta Comisionados del Empleados</p>
+                        <p>Vota por Dos</p>
+                    </div>
                 </div>
                 <div class="a">
                     <div class="a-row-1">
