bs content added to index page to see if any updates work

--- a/index.html
+++ b/index.html
@@ -136,15 +136,14 @@
     </div>
     <div class="cta-banner">
         <div class="cta-banner-heading">
-            Bacon ipsum dolor amet ham chuck
+            Testing to see if any changes to index page work
         </div>
         <div class="cta-content">
             <div class="cta-text">
-                Bacon ipsum dolor amet ham chuck pig buffalo kevin meatball. 
-                Filet mignon burgdoggen picanha prosciutto jowl corned 
+                Further testing 
             </div>
             <div class="cta-link-box">
-                 <a href="#" id='videoSummary' class="cta-link">Video Summary</a>
+                 <a href="child_pages/get-involved.html" id='videoSummary' class="cta-link">Video Summary</a>
                  <a href="#" id='actualVideo' class="cta-link">Video</a>
             </div>
         </div>
