further small changes to ballot pages

--- a/child_pages/cc-elections/cc_county_clerk_2024.html
+++ b/child_pages/cc-elections/cc_county_clerk_2024.html
@@ -49,7 +49,7 @@
         <!-- Modal content -->
         <div class="modal-content">
           <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
-          <h4 class="quick-sum">quick summary button</h4>
+          <h4 class="quick-sum">quick summary<h4>
           <h6 class="page-title">County Commissioner</h6>
           <p>This year the County Clerk seat is open for election. The current Democrat Clerk, <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/">Celeste Riley</a>, 
             is running for re-election against Republican challenger, <a href="https://www.ccrrogop.org/cumberlandcountyclerk2024">Commissioner Lods</a>.
@@ -111,7 +111,7 @@
                       </div>
                       <div class="ot-espanol">
                           <p>Secretario del Condado</p>
-                          <p>Vote por Uno</p>
+                          <p>Vota por Uno</p>
                       </div>
                   </div>
                   <div class="a">
@@ -181,7 +181,7 @@
                                   </div>
                                   <div class="ot-espanol">
                                       <p>Secretario del Condado</p>
-                                      <p>Vote por Uno</p>
+                                      <p>Vota por Uno</p>
                                   </div>
                               </div>
                               <div class="a">
