--- a/child_pages/cc-elections/house_of_representatives_2024.html
+++ b/child_pages/cc-elections/house_of_representatives_2024.html
@@ -104,7 +104,7 @@
                     </div>
                     <div class="ot-espanol">
                         <p>Congresista US</p>
-                        <p>Vote por Uno</p>
+                        <p>Vota por Uno</p>
                     </div>
                 </div>
                 <div class="a">
@@ -174,7 +174,7 @@
                                 </div>
                                 <div class="ot-espanol">
                                     <p>Congresista</p>
-                                    <p>Vote por Uno</p>
+                                    <p>Vota por Uno</p>
                                 </div>
                             </div>
                             <div class="a">
