--- a/child_pages/cc-elections/us_president_2024.html
+++ b/child_pages/cc-elections/us_president_2024.html
@@ -53,10 +53,10 @@
           <h4 class="quick-sum">quick summary</h4>
           <h6 class="page-title">US President</h6>
           <p>
-            This year the US Presidential seat is open for re-election. The incumbent, <a href="Candidates/biden.html">Joe Biden</a> is the Democrat Party nominee and former president 
-            <a href="Candidates/trump.html">Donald J. Trump</a> is the presumptive nominee for the Republicans. Despite possibly not being included in the upcoming CNN debate, we are 
-            aware that <a href="Candidates/kennedy.html">Robert F. Kennedy Jr.</a> is also on the NJ ballot. This will probably turn out to be a wild race.
-            
+            This year the US Presidential seat is open for re-election. The incumbent, <a href="Candidates/biden.html">Joe Biden</a> was the presumptive Democrat Party nominee, but recent events 
+            and rumors suggest that he might no longer be the actual nominee. Former president <a href="Candidates/trump.html">Donald J. Trump</a> is the nominee for the Republicans, and recent 
+            events have given him some points in the polls. Despite not being included in the recent CNN debate, we are aware that <a href="Candidates/kennedy.html">Robert F. Kennedy Jr.</a> 
+            is also on the NJ ballot. This will probably continue to be a wild race.
           </p>
         </div>
     </dialog>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="ot-espanol">
                         <p>Presidente</p>
-                        <p>Vote por Uno</p>
+                        <p>Vota por Uno</p>
                     </div>
                 </div>
                 <div class="a">
