--- a/child_pages/cc-elections/us_senate_2024.html
+++ b/child_pages/cc-elections/us_senate_2024.html
@@ -54,10 +54,10 @@
           <h6 class="page-title">US Senate NJ</h6>
           <p>
             This year 1 seat is open for election in the US Senate in NJ. The incumbent, <a href="Candidates/menendez.html">Bob Menendez</a> is running as an independent in general response 
-            to his <a href="https://www.justice.gov/usao-sdny/pr/us-senator-robert-menendez-his-wife-and-three-new-jersey-businessmen-charged-bribery#:~:text=Robert%20Menendez%20Allegedly%20Agreed%20to,Cash%2C%20and%20a%20Luxury%20Convertible">
-            alleged corruption scandal</a>. The Republicans have nominated <a href="Candidates/bashaw.html">Curtis Bashaw</a> in a somewhat unexpected victory over Trump endorsed candidate 
+            to his <a href="https://abcnews.go.com/US/sen-bob-menendez-federal-corruption-trial-verdict/story?id=111295557&fbclid=IwZXh0bgNhZW0CMTAAAR1tNvhC5vd4AoiW3EM4kJwMY95A92jBrGr9tT8gVynhhmrU9DjWjVJmcGY_aem_8V5EjDLYhpRQFvqi5_yo3g">
+            recent convictions</a>. The Republicans have nominated <a href="Candidates/bashaw.html">Curtis Bashaw</a> in a somewhat unexpected victory over Trump endorsed candidate 
             Serrano-Glassner. The Democrats nominated current Congressman <a href="Candidates/kim.html">Andy Kim</a>. This looks like it will be quite an interesting race, as Menendez's 
-            scandal is still in court, Andy Kim appears to be a somewhat moderate Democrat, and Bashaw is backed by our local Republicans who seem to have a winning strategy over the past 
+            conviction will probably affect his campaign significantly, Andy Kim appears to be a somewhat moderate Democrat, and Bashaw is backed by our local Republicans who seem to have a winning strategy over the past 
             several years. We are also aware of candidate Peter Vallorosi who will be running as a more straightforward independent, who may shake things up with his pure constitutionalist 
             perspectives.
           </p>
@@ -107,7 +107,7 @@
                     </div>
                     <div class="ot-espanol">
                         <p>Senadora</p>
-                        <p>Vote por Uno</p>
+                        <p>Vota por Uno</p>
                     </div>
                 </div>
                 <div class="a">
