nav bar edited and issues pages added

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                                 <li class="link"><a href="child_pages/cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/us_senate_2024.html">US Senate, NJ</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/cc_vice_president_2024.html">US Vice President</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/us_president_2024.html">US President</a></li>
                             </div>
                         </div>
@@ -156,7 +157,7 @@
             <div class="homepage-links-box">
                 <div class="other-links">
                     <a href="#" id='navBoxToggle' class="overlay-nav-link">Elections</a>
-                    <a href="#" id='navBoxToggle2' class="overlay-nav-link">County Issues</a>
+                    <a href="#" id='navBoxToggle2' class="overlay-nav-link">Issues</a>
                     <a href="child_pages/get-involved.html" class="overlay-nav-link">Get Involed</a>
                     <a href="child_pages/events.html" class="overlay-nav-link">Events</a>
                     <a href="child_pages/resources-archives-and-rabbit-holes.html" class="overlay-nav-link">Extra Info</a>
@@ -169,16 +170,18 @@
                         <a href="child_pages/cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a>
                         <a href="child_pages/cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a>
                         <a href="child_pages/cc-elections/us_senate_2024.html">US Senate, NJ</a>
+                        <a href="child_pages/cc-elections/cc_vice_president_2024.html">US Vice President</a>
                         <a href="child_pages/cc-elections/us_president_2024.html">US President</a>
                     </div>
                 </div>
                 <div class="nav-buttons-3">
                     <div class="county-dropdown-links">
-                        <a href="#">Link 1</a>
-                        <a href="#">Link 2</a>
-                        <a href="#">Link 3</a>
-                        <a href="#">Link 4</a>
-                        <a href="#">Link 5</a>
+                        <a href="child_pages/cc-elections/cc_election_issues.html">County Issues</a>
+                        <a href="child_pages/cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a>
+                        <a href="child_pages/cc-elections/us_house_of_reps_issues.html">House of Representatives Issues</a>
+                        <a href="child_pages/cc-elections/us_senate_issues.html">US Senate Issues</a>
+                        <a href="child_pages/cc-elections/us_vice_president_issues.html">Vice President Issues</a>
+                        <a href="child_pages/cc-elections/us_president_issues.html">President Issues</a>
                     </div>
                 </div>
             </div>
